--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="info">
                 <p><strong>Subject Name:</strong>web Designing</p>
                 <p><strong>Subject Code:</strong> BETCE13304</p>
-                <p><strong>Student Name:</strong> Krishna Dholakiya</p>
-                <p><strong>Enrollment No:</strong> 20230905090003 </p>
+                <p><strong>Student Name:</strong> Ridham vaghasiya</p>
+                <p><strong>Enrollment No:</strong> 20230905090058</p>
             </div>
         </section>
 
